--- a/home-page/package.json
+++ b/home-page/package.json
@@ -23,8 +23,9 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
